# msbwt-ak

./: Longleaf_intall.txt  README.md  Usage.txt  build_bwt.sh  instructions_ak.txt  pyproject.toml  setup.py
MUSCython/: CommandLineInterface.py
msbwt-ak/: pyproject.toml.txt  setup.py
msbwt-ak/MUSCython/: CommandLineInterface.py
