[build-system]
requires = ["setuptools", "wheel", "cython", "numpy", "pysam"]
build-backend = "setuptools.build_meta"

[project]
name = "msbwt3"
version = "0.1.0"

dependencies = [
    "numpy",
    "pysam",
    "cython"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

